tests/interpreter/errors/map_key_non_string.err
error[I006]: invalid map key: expected string or int, got bool
  --> tests/interpreter/errors/map_key_non_string.mochi:1:10

  1 | let x = {true: 2}
    |          ^

help:
  Map keys must be `string` or `int`.
